c/blink/registers.h

#ifndef _REGISTERS_H_
#define _REGISTERS_H_

extern unsigned int TIM2_CR1;
extern unsigned int TIM2_DIER;
extern unsigned int TIM2_SR;
extern unsigned int TIM2_EGR;
extern unsigned int TIM2_CNT;
extern unsigned int TIM2_PSC;
extern unsigned int TIM2_ARR;

extern unsigned int FLASH_ACR;
extern unsigned int RCC_CR;
extern unsigned int RCC_CFGR;
extern unsigned int RCC_APB1RST;
extern unsigned int RCC_AHBENR;
extern unsigned int RCC_APB1ENR;

extern unsigned int GPIOB_MODER;
extern unsigned int GPIOB_PUPDR;
extern unsigned int GPIOB_ODR;
extern unsigned int GPIOB_BSRR;

extern unsigned int NVIC_ISER;
extern unsigned int NVIC_IPR3;

#endif